test/Fail/Issue1977.agda
module _ where

module M where

  postulate
    [_] : Set → Set

Foo = [ M.undefined ]
