test/Fail/Issue1977.err
Issue1977.agda:8.7-8: error: [NotInScope]
Not in scope:
  [
  at Issue1977.agda:8.7-8
when scope checking [
